--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,14 @@
 Train:
   batch_size: 1
-  learning_rate: 0.002
-  reg: 0.00001
-  epochs: 20
-  steps: [6, 8]
-  warmup: 0
-  momentum: 0.95
+  d_learning_rate: 0.00001
+  d_momentum: 0.95
+  d_reg: 0.00001
+  g_learning_rate: 0.001
+  g_momentum: 0.95
+  g_reg: 0.00001
+  coeff_adv: 0.8
+  coeff_pw: 0.2
+  epochs: 10
 
 data:
-
   save_best: True
